--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "1.43.1",
     "@storybook/addon-a11y": "8.1.4",
     "@storybook/addon-essentials": "8.1.4",
     "@storybook/addon-interactions": "8.1.4",
@@ -26,7 +27,6 @@
     "@storybook/react": "8.1.4",
     "@storybook/test": "8.1.4",
     "@tailwindcss/forms": "0.5.7",
-    "@tailwindcss/line-clamp": "0.4.4",
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
