--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
 name: CI
-
 on:
   pull_request:
 
-# (Optional but nice) cancel older runs on the same PR
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
@@ -11,10 +9,11 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      CI: true
+      NEXT_TELEMETRY_DISABLED: 1
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Use Node 20.x
         uses: actions/setup-node@v4
@@ -22,18 +21,60 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      # === PLAN A: force npm install (ignore lockfile sync issues) ===
-      - name: Install dependencies (force npm install)
-        run: npm install
+      - name: Install deps (prefer npm ci, fallback to npm install)
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci || npm install
+          else
+            npm install
+          fi
 
-      - name: Lint (if present)
+      - name: Lint (optional)
         run: npm run lint --if-present
+
+      - name: Typecheck (optional)
+        run: npx tsc --noEmit || true
 
       - name: Build
         run: npm run build
 
-      - name: Install Playwright browsers (for e2e)
-        run: npx playwright install --with-deps
+      - name: Build Storybook (optional)
+        run: npm run build-storybook --if-present
 
-      - name: E2E smoke tests (if present)
-        run: npm run test:e2e --if-present
+  e2e:
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+      NEXT_TELEMETRY_DISABLED: 1
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install deps
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci || npm install
+          else
+            npm install
+          fi
+
+      # ✅ This action installs the correct system packages AND Playwright browsers
+      - name: Install Playwright (browsers + deps)
+        uses: microsoft/playwright-github-action@v1
+
+      - name: Run Playwright tests
+        run: npx playwright test
+
+      - name: Upload Playwright report (on failure)
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
+          retention-days: 7
