chore: guard storybook build and add public assets dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,11 @@
 name: CI
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+      - main
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Use Node 20.x
@@ -17,15 +20,18 @@ jobs:
           else
             npm install
           fi
-      - run: npm run lint --if-present
-      - run: npm run build
-      - name: Build Storybook (only if stories present)
+      - name: Run lint
+        run: npm run lint --if-present
+      - name: Build Next.js
+        run: npm run build
+      - name: Build Storybook (guarded)
         run: |
-          if ls components/**/*.stories.* 1> /dev/null 2>&1; then
-            npm run build-storybook || npx -y storybook@8.1.4 build
+          if ls components/**/*.stories.* 1> /dev/null 2>&1 || ls stories/**/*.stories.* 1> /dev/null 2>&1; then
+            npm run build-storybook || npx -y storybook@8 build
           else
             echo "No stories found, skipping Storybook build."
           fi
       - name: Install Playwright browsers
         run: npx playwright install --install-deps=true
-      - run: npm run test:e2e --if-present
+      - name: Run Playwright smoke tests
+        run: npm run test:e2e
