--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   build-test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -33,8 +34,8 @@ jobs:
             echo "No stories found, skipping Storybook build."
           fi
 
-      # 🔽 Lägg till dessa två steg
-      - name: Install Playwright browsers (Ubuntu 24.04)
+      # Officiellt sätt enligt varningen: installera browsers + OS-deps direkt via CLI
+      - name: Install Playwright browsers + system deps
         run: npx playwright install --with-deps
 
       - name: Run e2e tests (Playwright)
